--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>TYPING LOADING...</title>
 </head>
 <body>
-    
+    <div class="loader">
+        <h2>
+            LOADING...
+        </h2>
+    </div>
 </body>
 </html>
